# ytdl-nfo

./: .gitignore  README.md  pyproject.toml
tests/: test_nfo.py
ytdl_nfo/: Ytdl_nfo.py  __init__.py  nfo.py  nfo_generator.py
ytdl_nfo/configs/: nebula_channel.yaml  nebula_video.yaml  test.yaml  twitch_clips.yaml  twitch_vod.yaml  youtube_tab.yaml
